Double checked checkstyle warnings that were left